Broke out OO particle code into its own file. Need to do the same with the shaders once they're finalised.

--- a/rewrite/sandbox/shaders/particles-oo.html
+++ b/rewrite/sandbox/shaders/particles-oo.html
@@ -59,6 +59,7 @@
 
     <script type="text/javascript" src="../../res/js/lib/THREE-r58.min.js"></script>
     <script type="text/javascript" src="../../res/js/lib/Stats.min.js"></script>
+    <script type="text/javascript" src="./Particles.js"></script>
 </head>
 <body>
     <script type="text/x-shader" id="vertex">
@@ -74,17 +75,18 @@
         attribute float alive;
         attribute float age;
         attribute float size;
+        attribute float sizeEnd;
 
         varying vec4 vColor;
 
         // Linearly lerp a float
         float Lerp( float start, float end ) {
-            return (start + (end - start) * (age / duration));
+            return (start + ((end - start) * (age / duration)));
         }
 
         // Linearly lerp a vector3
         vec3 Lerp( vec3 start, vec3 end ) {
-            return (start + (end - start) * (age/duration));
+            return (start + ((end - start) * (age / duration)));
         }
 
         // Return the size of the particle
@@ -113,7 +115,7 @@
             newPos = newPos + v;
             vec4 mvPosition = modelViewMatrix * vec4( newPos, 1.0 );
 
-            gl_PointSize = GetSize( size, mvPosition );
+            gl_PointSize = Lerp( GetSize( size, mvPosition ), sizeEnd );
 
             return mvPosition;
         }
@@ -179,250 +181,12 @@
         var scene, camera, renderer, stats, stats2, clock;
 
 
-        function ParticleEmitter( options ) {
-            options = options || {};
-
-            this.particlesPerSecond     = options.particlesPerSecond || 100;
-
-            // Attribute properties ( per particle settings )
-            this.position               = options.position || new THREE.Vector3();
-            this.positionSpread         = options.positionSpread || new THREE.Vector3();
-
-            this.acceleration           = options.acceleration || new THREE.Vector3();
-            this.accelerationSpread     = options.accelerationSpread || new THREE.Vector3();
-
-            this.velocity               = options.velocity || new THREE.Vector3();
-            this.velocitySpread         = options.velocitySpread || new THREE.Vector3();
-
-            this.size                   = options.size || 10;
-            this.sizeSpread             = options.sizeSpread || 0;
-
-            this.numParticles           = null;
-
-            this.attributes             = null;
-            this.vertices               = null;
-            this.verticesIndex          = 0;
-            this.age                    = 0;
-            this.maxAge                 = null;
-            this.recycled               = [];
-        }
-
-        ParticleEmitter.prototype = {
-            _resetParticle: function( p ) {
-                p.copy( this.position );
-            },
-
-            tick: function( dt ) {
-                var a = this.attributes,
-                    alive = a.alive.value,
-                    age = a.age.value,
-                    velocity = a.velocity.value,
-                    start = this.verticesIndex,
-                    end = start + this.numParticles,
-                    r = this.recycled,
-                    pps = this.particlesPerSecond,
-                    m = this.maxAge,
-                    emitterAge = this.age;
-
-                r.length = 0;
-
-                for( var i = start; i < end; ++i ) {
-                    if( alive[i] === 1.0 ) {
-                        age[i] += dt;
-                    }
-
-                    if(age[i] >= m) {
-                        age[i] = 0.0;
-                        alive[i] = 0.0;
-                        r.push(i);
-                    }
-                }
-
-                if( emitterAge <= this.maxAge ) {
-                    // determine indices of particles to activate
-                    var startIndex  = start + Math.round( pps * emitterAge );
-                    var endIndex    = start + Math.round( pps * (emitterAge + dt) );
-
-                    if( endIndex > start + this.numParticles ) {
-                        endIndex = start + this.numParticles;
-                    }
-
-                    for( var i = startIndex; i < endIndex; i++ ) {
-                        alive[i] = 1.0;
-                        this._resetParticle( this.vertices[i] );
-                    }
-                }
-
-                for(var i = 0; i < r.length; ++i) {
-                    alive[ r[i] ] = 1.0;
-                    this._resetParticle( this.vertices[ r[i] ] );
-                }
-
-                this.age += dt;
-            }
-        };
-
-
-        function ParticleGroup( options ) {
-            this.fixedTimeStep          = options.fixedTimeStep || 0.016;
-
-            this.shape                  = options.shape || 'sphere';
-
-            // Uniform properties ( applied to all particles )
-            this.maxAge                 = options.maxAge || 3;
-            this.colorStart             = options.colorStart || new THREE.Color( 'white' );
-            this.colorEnd               = options.colorEnd || new THREE.Color( 'blue' );
-
-            this.opacityStart           = options.opacityStart || 1;
-            this.opacityEnd             = options.opacityEnd || 0;
-
-            this.texture                = options.texture || null;
-            this.hasPerspective         = options.hasPerspective || 1;
-            this.colorize               = options.colorize || 1;
-
-            // Create uniforms
-            this.uniforms = {
-                customColor:    { type: 'c', value: this.colorStart },
-                customColorEnd: { type: 'c', value: this.colorEnd },
-                duration:       { type: 'f', value: parseFloat(3) },
-                texture:        { type: 't', value: this.texture },
-                hasPerspective: { type: 'i', value: parseInt( this.hasPerspective ) },
-                colorize:       { type: 'i', value: parseInt( this.colorize ) },
-                opacity:        { type: 'f', value: parseFloat(this.opacityStart) },
-                opacityEnd:     { type: 'f', value: parseFloat(this.opacityEnd) }
-            };
-
-            this.attributes = {
-                acceleration:   { type: 'v3', value: [] },
-                velocity:       { type: 'v3', value: [] },
-                alive:          { type: 'f', value: [] },
-                age:            { type: 'f', value: [] },
-                size:           { type: 'f', value: [] }
-            };
-
-            this.emitters   = [];
-            this.geometry   = null;
-            this.material   = null;
-            this.mesh       = null;
-
-            this._createGeometry();
-            this._createMaterial();
-            this._createMesh();
-
-        }
-
-        ParticleGroup.prototype = {
-            _createGeometry: function() {
-                this.geometry = new THREE.Geometry();
-            },
-
-            _createMaterial: function() {
-                this.material = new THREE.ShaderMaterial({
-                    uniforms:       this.uniforms,
-                    attributes:     this.attributes,
-                    vertexShader:   document.getElementById('vertex').textContent,
-                    fragmentShader: document.getElementById('fragment').textContent,
-                    blending:       THREE.AdditiveBlending,
-                    transparent:    true,
-                    alphaTest:      0.5,
-                    depthWrite:     false
-                });
-            },
-
-            _createMesh: function() {
-                this.mesh = new THREE.ParticleSystem( this.geometry, this.material );
-                this.mesh.dynamic = true;
-            },
-
-            _randomVector3: function( base, spread ) {
-                var v = new THREE.Vector3();
-
-                v.copy( base );
-
-                v.x += Math.random() * spread.x - (spread.x/2);
-                v.y += Math.random() * spread.y - (spread.y/2);
-                v.z += Math.random() * spread.z - (spread.z/2);
-
-                return v;
-
-                // return new THREE.Vector3(
-                //     Math.random() * base.x - spread.x,
-                //     Math.random() * base.y - spread.y,
-                //     Math.random() * base.z - spread.z
-                // );
-            },
-
-            _randomFloat: function( base, spread ) {
-                return base + (Math.random() * spread - (spread/2));
-                // return Math.random() * base - spread;
-            },
-
-            _randomizeExistingVector3: function( vector, base, spread ) {
-                vector.set(
-                    Math.random() * base.x - spread.x,
-                    Math.random() * base.y - spread.y,
-                    Math.random() * base.z - spread.z
-                );
-            },
-
-            addEmitter: function( emitter ) {
-                emitter.numParticles = emitter.particlesPerSecond * this.maxAge;
-
-
-                var vertices = this.geometry.vertices,
-                    start = vertices.length,
-                    end = emitter.numParticles + start,
-                    a = this.attributes,
-                    acceleration = a.acceleration.value,
-                    velocity = a.velocity.value,
-                    alive = a.alive.value,
-                    age = a.age.value,
-                    size = a.size.value;
-
-                // Create the values
-                for( var i = start; i < end; ++i ) {
-                    vertices[i]     = this._randomVector3( emitter.position, emitter.positionSpread );
-                    acceleration[i] = this._randomVector3( emitter.acceleration, emitter.accelerationSpread );
-                    velocity[i]     = this._randomVector3( emitter.velocity, emitter.velocitySpread );
-                    size[i]         = Math.max( 0.1, this._randomFloat( emitter.size, emitter.sizeSpread ) );
-                    age[i]          = 0.0;
-                    alive[i]        = 0.0;
-                }
-
-                // Cache properties on the emitter so we can access
-                // them from its tick function.
-                emitter.verticesIndex   = start;
-                emitter.attributes      = this.attributes;
-                emitter.vertices        = this.geometry.vertices;
-                emitter.maxAge          = this.maxAge;
-
-                // Save this emitter in an array for processing during this.tick()
-                this.emitters.push( emitter );
-
-                // this._createMesh();
-            },
-
-            tick: function( dt ) {
-                dt = dt || this.fixedTimeStep;
-
-                for( var i = 0; i < this.emitters.length; ++i ) {
-                    this.emitters[i].tick( dt );
-                }
-
-                // Set flags to update (causes less garbage than ParticleSystem.sortParticles = true);
-                this.attributes.age.needsUpdate = true;
-                this.attributes.alive.needsUpdate = true;
-                this.geometry.verticesNeedUpdate = true;
-            }
-        };
-
-
         var myEmitter, myParticleGroup, myParticleGroup2;
 
         function init() {
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 10000);
-            camera.position.z = 100;
+            camera.position.z = 10;
 
             renderer = new THREE.WebGLRenderer({
                 precision: 'mediump'
@@ -448,66 +212,36 @@
             return new THREE.Vector3().addVectors( base, vec3.multiplyScalar( radius ) );
         }
 
+
+        var emitters = [];
+
         function initShader() {
             myParticleGroup = new ParticleGroup({
                 texture: THREE.ImageUtils.loadTexture('../../res/textures/smokeparticle.png'),
-                maxAge: 3
+                maxAge: 0.5,
+                opacityStart: 0.0,
+                opacityEnd: 1.0,
+
+                colorStart: new THREE.Color('red'),
+                colorEnd: new THREE.Color('yellow')
             });
 
             myEmitter = new ParticleEmitter({
-                position: new THREE.Vector3(10, 0, 0),
-                acceleration: new THREE.Vector3(0, -10, 0),
-                velocity: new THREE.Vector3(0, 10, 0),
-                velocitySpread: new THREE.Vector3(10, 0, 10),
-                particlesPerSecond: 500,
-                size: 5,
-                sizeSpread: 5
-            });
-
-            var myEmitter2 = new ParticleEmitter({
-                position: new THREE.Vector3(-10, 0, 0),
-                acceleration: new THREE.Vector3(0, 10, 0),
-                velocity: new THREE.Vector3(0, -10, 0),
-                velocitySpread: new THREE.Vector3(-10, 0, -10),
-                particlesPerSecond: 500
-            });
-
-            var myEmitter3 = new ParticleEmitter({
                 position: new THREE.Vector3(0, 0, 0),
-                acceleration: new THREE.Vector3(0, -20, 0),
-                velocity: new THREE.Vector3(0, 20, 0),
-                velocitySpread: new THREE.Vector3(-10, 0, -10),
-                size: 5,
-                sizeSpread: 2.5,
-                particlesPerSecond: 500
+                positionSpread: new THREE.Vector3(1, 5, 1),
+                acceleration: new THREE.Vector3(0, 8, 0),
+                // accelerationSpread: new THREE.Vector3(1, 1, 1),
+                particlesPerSecond: 200,
+                size: 10,
+                sizeSpread: 10,
+                sizeEnd: 0
             });
 
             myParticleGroup.addEmitter( myEmitter );
-            // myParticleGroup.addEmitter( myEmitter2 );
-            // myParticleGroup.addEmitter( myEmitter3 );
 
-
-            // myParticleGroup2 = new ParticleGroup({
-            //     colorStart: new THREE.Color('green'),
-            //     colorEnd: new THREE.Color('blue'),
-            //     texture: THREE.ImageUtils.loadTexture('../../res/textures/smokeparticle.png'),
-            //     maxAge: 3
-            // });
-
-            // var myEmitter4 = new ParticleEmitter({
-            //     position: new THREE.Vector3(0, -10, 0),
-            //     acceleration: new THREE.Vector3(10, 10, 10),
-            //     velocity: new THREE.Vector3(0, 0, 0),
-            //     velocitySpread: new THREE.Vector3(0, 0, -0),
-            //     size: 5,
-            //     sizeSpread: 2.5,
-            //     particlesPerSecond: 500
-            // });
-
-            // myParticleGroup2.addEmitter( myEmitter4 );
+            emitters.push( myEmitter );
 
             scene.add( myParticleGroup.mesh );
-            // scene.add( myParticleGroup2.mesh );
         }
 
 
@@ -526,20 +260,17 @@
 
 
         function updateCamera() {
-            // camera.position.x = Math.cos( Date.now() * 0.0005 ) * 20;
+            camera.position.x = Math.cos( Date.now() * 0.0005 ) * 150;
+            camera.position.z = Math.sin( Date.now() * 0.0005 ) * 150;
             // camera.position.y = Math.sin( Date.now() * 0.0005 ) * 100;
-            // camera.position.z = Math.sin( Date.now() * 0.0005 ) * 20;
-            // camera.lookAt( scene.position );
-
-            myEmitter.position.x = Math.cos( Date.now() * 0.0005 ) * -50;
-            myEmitter.position.z = Math.sin( Date.now() * 0.0005 ) * -50;
+            camera.lookAt( scene.position );
         }
 
 
         function render( dt ) {
             myParticleGroup.tick();
             // myParticleGroup2.tick();
-            updateCamera();
+            // updateCamera();
 
             renderer.render( scene, camera );
         }
