Moar rocketsgit status Updated keyboard and mouse handlers

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -25,6 +25,8 @@
 	<script type="text/javascript" src="../starfield/Starfield.js"></script>
 	<script type="text/javascript" src="../skybox/Skybox.js"></script>
 
+	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
+	<script type="text/javascript" src="../rockets/Rockets.js"></script>
 
 	<script type="text/javascript" src="../weapon/Weapon.js"></script>
 	<script type="text/javascript" src="../weapon/ParticleWeapon.js"></script>
