Bug fixes for ShaderParticles, rocket explosions, added controls back to player's ship.

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="../external/THREE.ColladaLoader.js"></script>
 
 	<script type="text/javascript" src="../utils/utils.js"></script>
+	<script type="text/javascript" src="../pool/Pool.js"></script>
 	<script type="text/javascript" src="../events/Events.js"></script>
 
 	<script type="text/javascript" src="../config/CONFIG.js"></script>
