Started HUD work

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -33,6 +33,9 @@
 	<script type="text/javascript" src="../weapon/ParticleWeapon.js"></script>
 	<script type="text/javascript" src="../weapon/PlasmaCannon.js"></script>
 
+	
+	<script type="text/javascript" src="../hud/HUD.js"></script>
+
 	<script type="text/javascript" src="../constants/CONSTANTS.js"></script>
 	<script type="text/javascript" src="../initialization/events.js"></script>
 	<script type="text/javascript" src="../initialization/initialization.js"></script>
