--- a/rewrite/modules/_dist/buildTest.html
+++ b/rewrite/modules/_dist/buildTest.html
@@ -41,6 +41,7 @@
 
 	// <script type="text/javascript" src="../layer/Layer.js"></script> -->
 
-	<script type="text/javascript" src="build.min.js"></script>
+	<!-- <script type="text/javascript" src="build.min.js"></script> -->
+	<script type="text/javascript" src="build.closure.min.js"></script>
 </body>
 </html>
