More HUD work. Added core GameObject file to be inherited by other game objects (ships, rockets, etc.). Added weaponColliders to LayerManager. Quick test of weaponColliders in Rockets.js

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -26,6 +26,10 @@
 	<script type="text/javascript" src="../starfield/Starfield.js"></script>
 	<script type="text/javascript" src="../skybox/Skybox.js"></script>
 
+
+	<script type="text/javascript" src="../gameObject/GameObject.js"></script>
+	<script type="text/javascript" src="../ship/Ship.js"></script>
+
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
 	<script type="text/javascript" src="../rockets/Rockets.js"></script>
 
