Started targeting. Started to outline new structure for GameObjects

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -30,6 +30,8 @@
 	<script type="text/javascript" src="../gameObject/GameObject.js"></script>
 	<script type="text/javascript" src="../ship/Ship.js"></script>
 
+	<script type="text/javascript" src="../gameObjects/Target.js"></script>
+
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
 	<script type="text/javascript" src="../rockets/Rockets.js"></script>
 
