Updated Rocket firing system to take pos, quaternion, and parent's velocity

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="../io/MouseHandler.js"></script>
 	<script type="text/javascript" src="../io/KeyboardHandler.js"></script>
 	<script type="text/javascript" src="../assetLoader/AssetLoader.js"></script>
+	<script type="text/javascript" src="../targeting/TargetingSystem.js"></script>
 
 	<script type="text/javascript" src="../planet/Planet.js"></script>
 	<script type="text/javascript" src="../starfield/Starfield.js"></script>
@@ -29,8 +30,7 @@
 
 	<script type="text/javascript" src="../gameObject/GameObject.js"></script>
 	<script type="text/javascript" src="../ship/Ship.js"></script>
-
-	<script type="text/javascript" src="../gameObjects/Target.js"></script>
+	<script type="text/javascript" src="../gameObjects/TargetBox.js"></script>
 
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
 	<script type="text/javascript" src="../rockets/Rockets.js"></script>
