Playing around with asteroid fields

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -30,6 +30,7 @@
 
 	<script type="text/javascript" src="../gameObject/GameObject.js"></script>
 	<script type="text/javascript" src="../ship/Ship.js"></script>
+	<script type="text/javascript" src="../ship/Mothership.js"></script>
 	<script type="text/javascript" src="../gameObjects/TargetBox.js"></script>
 
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
