Added PlasmaCannon weapon. Made generic Weapon class. More HUD design work.

--- a/rewrite/modules/_tests/weapons.html
+++ b/rewrite/modules/_tests/weapons.html
@@ -36,6 +36,8 @@
 	<script type="text/javascript" src="../particles/ShaderParticles.js"></script>
 	<script type="text/javascript" src="../rockets/Rockets.js"></script>
 
+	<script type="text/javascript" src="../weapon/PlasmaObject.js"></script>
+
 	<script type="text/javascript" src="../weapon/Weapon.js"></script>
 	<script type="text/javascript" src="../weapon/ParticleWeapon.js"></script>
 	<script type="text/javascript" src="../weapon/PlasmaCannon.js"></script>
