Switched to addVectors in GJK support function. Appears to have solved problems

--- a/rewrite/modules/collisions/index.html
+++ b/rewrite/modules/collisions/index.html
@@ -28,7 +28,7 @@
             clock = new THREE.Clock();
 
             cube1 = new THREE.Mesh( new THREE.CubeGeometry( cubeSize, cubeSize, cubeSize ) );
-            cube2 = new THREE.Mesh( new THREE.CubeGeometry( 11, 12, 15 ) );
+            cube2 = new THREE.Mesh( new THREE.CubeGeometry( cubeSize, cubeSize, cubeSize ) );
             plane = new THREE.Mesh( new THREE.SphereGeometry( 2, 2 ) );
 
             scene.add( cube1 );
